tests/ui/traits/new-solver/async.fail.stderr
error[E0308]: mismatched types
  --> $DIR/async.rs:12:23
   |
LL |     needs_async(async {});
   |                       ^^ expected `i32`, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
